# codex-image-cli

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
skills/codex-image/: SKILL.md
skills/codex-image/agents/: openai.yaml
skills/codex-image/scripts/: invoke-codex-image.ps1
src/: codex_config.rs  image_generation.rs  main.rs
tests/: cli.rs  test-invoke-codex-image.ps1
