[package]
name = "codex-image-cli"
version = "0.1.0"
edition = "2024"
autobins = false

[[bin]]
name = "codex-image"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
