[package]
name = "codex-image-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Generate images through the OpenAI-compatible provider configured in Codex"
license = "MIT"
repository = "https://github.com/Gamespa/codex-image-cli"
homepage = "https://github.com/Gamespa/codex-image-cli"
readme = "README.md"
keywords = ["codex", "image-generation", "openai", "cli"]
categories = ["command-line-utilities", "multimedia::images"]
autobins = false

[[bin]]
name = "codex-image"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
# Keep the URL stack compatible with the project's Rust 1.85 MSRV.
idna_adapter = "=1.2.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
